don't make sharing as large and prevent it overlapping content

--- a/css/_sass/layout.scss
+++ b/css/_sass/layout.scss
@@ -8,7 +8,14 @@
 	max-width: $content-max-width;
 	margin: 0 auto;
 	@include clearfix();
+
   padding: 0 10px;
+  @media (min-width: $show-sharebox) {
+    padding: 0 20px;
+  }
+  @media (min-width: $set-sharebox-size-1) {
+    padding: 0 40px;
+  }
 }
 
 // vertical spacing scale for sections
