--- a/css/_sass/social-box.scss
+++ b/css/_sass/social-box.scss
@@ -220,14 +220,14 @@
   }
 }
 
-@media (min-width: $set-sharebox-size-2) {
-  .sharbx {
-    font-size: 1em;
-    .number-spinner {
-      font-size: 22px;
-    }
-  }
-}
+// @media (min-width: $set-sharebox-size-2) {
+//   .sharbx {
+//     font-size: 1em;
+//     .number-spinner {
+//       font-size: 22px;
+//     }
+//   }
+// }
 
 @media (min-width: $set-sharebox-size-3) {
   .sharbx {
